# small-model-hackathon

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  TODO.md  USAGE.md  app.py  modal_math_gate_publish_result.json  modal_science_gate_publish_result.json  models.yaml  pyproject.toml  requirements.txt  voice_models.yaml
.cursor/plans/: echocoach_voice_tab_45e774f7.plan.md  ensemble_refactor_benchmark_be904eec.plan.md  gradio_sdk_deploy_58daaf6e.plan.md  gradio_ui_ux_redesign_384ea89c.plan.md  hf_space_deploy_review_a7f8b3c3.plan.md  hf_space_publish_e8a57bab.plan.md  knowledge_mindmap_view_f479b154.plan.md  last_sprint_demo_polish_2f148411.plan.md  lesson_slides_search_rag_832c4077.plan.md  llama_backend_model_switching_77de87de.plan.md  lm-eval_harness_integration_34af70c7.plan.md  modal_finetune_benchmark_ac96d473.plan.md  modal_lora_training_loop_1a8a7b4b.plan.md  model_verification_pipeline_ed9d35ab.plan.md  multilingual_coach_cohere_eed97371.plan.md  off_brand_studio_ui_5c8c7dff.plan.md  quiz_maker_skill_52f29d14.plan.md  researchmind_rag_agent_7390b536.plan.md  skill_agent_pptx_5413e3c2.plan.md  slides_from_chat_+_quiz_f53701a3.plan.md  slides_from_chat_presenter_4cff567a.plan.md  studio_classic_parity_48cdd684.plan.md  teachervoice_realtime_plan_8950875f.plan.md  todo_last_sprint_tracks_b100b17b.plan.md  uv_monorepo_init_d9207227.plan.md
apps/gradio-space/: README.md  pyproject.toml
apps/gradio-space/src/gradio_space/: __init__.py  app.py  conversation_helpers.py  model_loading.py  research_helpers.py  server.py  spaces_runtime.py  voice_helpers.py
apps/gradio-space/src/gradio_space/api/: __init__.py  serializers.py  studio.py
apps/gradio-space/src/gradio_space/tabs/: __init__.py  chat.py  echo_coach.py  education_pptx.py  quiz_maker.py  research_mind.py  teacher_voice.py
apps/gradio-space/src/gradio_space/ui/: __init__.py  components.py  settings_panel.py  studio_html.py  styles.css  theme.py
apps/gradio-space/static/studio/: index.html  studio.css  studio.js
apps/gradio-space/tests/: test_conversation_helpers.py  test_model_loading.py
libs/agent/: README.md  pyproject.toml
libs/agent/src/agent/: __init__.py  models.py  preview.py  progress.py  prompts.py  research_prompts.py  runner.py  skills.py  tools_registry.py  trace.py
libs/agent/src/agent/tools/: __init__.py  docx.py  pptx.py  quiz.py  research_tools.py
libs/agent/tests/: test_education_sources.py  test_quiz_maker.py  test_research_runner.py  test_runner.py
libs/echocoach/: README.md  pyproject.toml
libs/echocoach/src/echocoach/: __init__.py  audio_io.py  coach.py  config.py  models.py  omni.py  pipeline.py  prompts.py  recording.py  teacher_voice.py  utils.py  voiceout.py
libs/echocoach/src/echocoach/analysis/: charts.py  fillers.py  pace.py
libs/echocoach/src/echocoach/asr/: cohere.py  factory.py  whisper_cpp.py
libs/echocoach/src/echocoach/tts/: __init__.py  piper.py  vibevoice.py
libs/echocoach/tests/: make_fixture.py  test_coach_parse.py  test_fillers.py  test_pace.py  test_recording.py  test_teacher_voice.py
libs/inference/: README.md  pyproject.toml
libs/inference/src/inference/: __init__.py  base.py  config.py  device_utils.py  factory.py  llama_cpp.py  response_clean.py  transformers.py
libs/inference/tests/: test_config.py  test_device_utils.py  test_response_clean.py
libs/researchmind/: README.md  pyproject.toml
libs/researchmind/src/researchmind/: __init__.py  chunking.py  citations.py  config.py  embeddings.py  extract.py  ingest.py  retrieve.py  scope.py  scrape_pdf.py  scrape_web.py  search_urls.py  store.py  url_suggest.py  url_validate.py
libs/researchmind/tests/: test_chunking.py  test_citations.py  test_retrieve.py  test_scope.py  test_search_queries.py  test_store.py  test_url_validate.py
notebook/: gemma-finetune.ipynb
outputs/researchmind/: memory.db
outputs/traces/: 5ffe463cd9ff.json
research/: README.md  USAGE.md  eval_harness.py  finetune.py  llm_emb_jepa_ensemble_pluggable.py  world_model_ensemble.py
research/data/: benchmark-kb.jsonl  benchmark-qa.jsonl  build_language_lesson_chat.py  education-lesson-chat.jsonl  language-lesson-ar.jsonl  language-lesson-eval-ar.jsonl  language-lesson-eval-fr.jsonl  language-lesson-fr.jsonl  language-lesson-seeds.yaml  science-tutor-chat.jsonl
research/docs/: overview.md
research/ensemble/: README.md  pyproject.toml
research/ensemble/scripts/: smoke.sh
research/evals/: README.md  USAGE.md  base.py  bfcl.py  experiment_001.yaml  gaia.py  language_lesson_smoke.py  pyproject.toml  reporter.py  requirements.txt  run_benchmark.py  swe_bench.py  tau_bench.py
research/evals/configs/: ensemble_jepa_lesson.yaml  eval_profiles.yaml  experiment_001.yaml  lm_eval_code.yaml  lm_eval_commonsense.yaml  lm_eval_compare_study.yaml  lm_eval_french.yaml  lm_eval_instructions.yaml  lm_eval_math.yaml  lm_eval_medical.yaml  lm_eval_minicpm5.yaml  lm_eval_multilingual.yaml  lm_eval_reasoning.yaml  lm_eval_safety.yaml  lm_eval_science.yaml  lm_eval_smoke.yaml  lm_eval_understanding.yaml
research/evals/docs/: benchmarks.md  eval_profiles.md
research/evals/src/slm_evals/: __init__.py  run_benchmark.py  run_lm_eval.py
research/evals/src/slm_evals/benchmarks/: bfcl.py  gaia.py  swe_bench.py  tau_bench.py
research/evals/src/slm_evals/lm_eval/: __init__.py  ensemble_lm.py  preset_resolver.py  profiles.py
research/evals/src/slm_evals/utils/: config_loader.py  model_loader.py
research/modal/: README.md  SERVER.md  _common.py  experiments.yaml  finetune_app.py  server_app.py
research/modal/tests/: test_modal_common.py
research/notebook/: minicpm5-modal-finetune.ipynb
results/lm_eval/ensemble-jepa__manual/: summary.md
scripts/: benchmark_rag_chat.py  download_model.py  echo_coach_smoke.sh  upload_trace.py
skills/education-pptx/: SKILL.md
skills/extract-content/: SKILL.md
skills/extract-content/references/: chunking-policy.md
skills/quiz-maker/: SKILL.md
skills/research-mind/: SKILL.md
skills/scrape-pdf/: SKILL.md
skills/scrape-web/: SKILL.md
(+30 files in other folders)
