[project]
name = "small-model-hackathon"
version = "0.1.0"
description = "Build Small Hackathon — Gradio Space with local llama.cpp inference"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "agent",
    "gradio-space",
    "inference",
]

[dependency-groups]
dev = [
    "ruff>=0.9.0",
    "pytest>=8.0.0",
]
finetune = [
    "datasets>=3.0.0",
    "peft>=0.14.0",
]

[tool.uv.workspace]
members = [
    "apps/*",
    "libs/*",
]

[tool.uv.sources]
agent = { workspace = true }
gradio-space = { workspace = true }
inference = { workspace = true }
