[project]
name = "small-model-hackathon"
version = "0.1.0"
description = "Build Small Hackathon — Gradio Space with local llama.cpp inference"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "agent",
    "echocoach",
    "gradio-space",
    "inference",
    "researchmind",
]

[dependency-groups]
dev = [
    "ruff>=0.9.0",
    "pytest>=8.0.0",
]
finetune = [
    "bitsandbytes>=0.46.1",
    "datasets>=3.0.0",
    "peft>=0.14.0",
]
evals = [
    "slm-evals",
]
lm-eval = [
    "slm-evals[lm-eval]",
]
modal = [
    "modal>=0.73.0",
    "pyyaml>=6.0",
]

[tool.uv.workspace]
members = [
    "apps/*",
    "libs/*",
    "research/evals",
]

[tool.uv.sources]
agent = { workspace = true }
echocoach = { workspace = true }
gradio-space = { workspace = true }
inference = { workspace = true }
researchmind = { workspace = true }
slm-evals = { workspace = true }
