[project]
name = "gradio-space"
version = "0.1.0"
description = "Gradio chat UI for the Build Small Hackathon Space"
readme = "README.md"
authors = [
    { name = "MSGhais", email = "msghais135@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "agent",
    "echocoach[whisper]",
    "gradio>=5.0.0",
    "inference",
]

[tool.uv.sources]
agent = { workspace = true }
echocoach = { workspace = true }
inference = { workspace = true }

[build-system]
requires = ["uv_build>=0.8.13,<0.9.0"]
build-backend = "uv_build"
