[project]
name = "agent"
version = "0.1.0"
description = "Skill-based local agent loop for hackathon tasks"
readme = "README.md"
authors = [
    { name = "MSGhais", email = "msghais135@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "inference",
    "pydantic>=2.0.0",
    "python-pptx>=1.0.0",
    "pyyaml>=6.0.2",
]

[tool.uv.sources]
inference = { workspace = true }

[build-system]
requires = ["uv_build>=0.8.13,<0.9.0"]
build-backend = "uv_build"
