[project]
name = "echocoach"
version = "0.1.0"
description = "Local voice practice coach — ASR, pace/filler analysis, LLM coaching, TTS VoiceOut"
readme = "README.md"
authors = [
    { name = "MSGhais", email = "msghais135@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "inference",
    "agent",
    "matplotlib>=3.9.0",
    "numpy>=2.0.0",
    "pyyaml>=6.0.2",
    "soundfile>=0.12.0",
    "librosa>=0.10.0",
    "transformers>=5.4.0",
    "torch>=2.5.0",
    "accelerate>=1.2.0",
    "huggingface-hub>=0.27.0",
]

[project.optional-dependencies]
whisper = [
    "pywhispercpp>=1.3.0",
]
piper = [
    "piper-tts>=1.3.0",
]

[tool.uv.sources]
inference = { workspace = true }
agent = { workspace = true }

[build-system]
requires = ["uv_build>=0.8.13,<0.9.0"]
build-backend = "uv_build"
