[project]
name = "inference"
version = "0.1.0"
description = "Swappable local inference backends for the hackathon Space"
readme = "README.md"
authors = [
    { name = "MSGhais", email = "msghais135@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.2.0",
    "huggingface-hub>=0.27.0",
    "llama-cpp-python>=0.3.0",
    "pyyaml>=6.0.2",
    "torch>=2.5.0",
    "torchvision>=0.20.0",
    "peft>=0.14.0",
    "transformers>=5.7.0",
]

[build-system]
requires = ["uv_build>=0.8.13,<0.9.0"]
build-backend = "uv_build"
