[project]
name = "researchmind"
version = "0.1.0"
description = "Local scraper + RAG + MemRAG store for ResearchMind agent"
readme = "README.md"
authors = [
    { name = "MSGhais", email = "msghais135@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "inference",
    "ddgs>=9.0.0",
    "googlesearch-python>=1.3.0",
    "httpx>=0.28.0",
    "numpy>=2.0.0",
    "pydantic>=2.0.0",
    "pypdf>=5.0.0",
    "python-docx>=1.1.0",
    "sentence-transformers>=3.0.0",
    "trafilatura>=2.0.0",
]

[build-system]
requires = ["uv_build>=0.8.13,<0.9.0"]
build-backend = "uv_build"
